--- a/package.json
+++ b/package.json
@@ -12,21 +12,22 @@
   },
   "dependencies": {
     "core-js": "^3.36.0",
+    "marked": "^16.2.1",
     "regenerator-runtime": "^0.14.1"
   },
   "devDependencies": {
     "@types/office-js": "^1.0.377",
     "@types/office-runtime": "^1.0.35",
+    "copy-webpack-plugin": "^12.0.2",
+    "css-loader": "^6.8.1",
+    "html-webpack-plugin": "^5.6.0",
+    "office-addin-debugging": "^6.0.3",
+    "office-addin-manifest": "^2.0.3",
+    "style-loader": "^3.3.3",
+    "ts-loader": "^9.5.1",
     "typescript": "^5.4.2",
     "webpack": "^5.95.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.1.0",
-    "ts-loader": "^9.5.1",
-    "html-webpack-plugin": "^5.6.0",
-    "copy-webpack-plugin": "^12.0.2",
-    "office-addin-debugging": "^6.0.3",
-    "office-addin-manifest": "^2.0.3",
-    "css-loader": "^6.8.1",
-    "style-loader": "^3.3.3"
+    "webpack-dev-server": "^5.1.0"
   }
 }
